Allow a passive touchstart listener to add a blocking touchmove listener.

We used the touchstart result for all touchmove results. This would
prevent being able to add a blocking touchmove inside a passive
touchstart listener. Hit test the first touchmove that has exceeded the
slop region.

BUG=729031

Change-Id: If362f45ea5b233892830cd699a3433d2ccc4162a