cc/trees/layer_tree_host_impl_unittest.cc
@@ -967,8 +967,9 @@ TEST_F(LayerTreeHostImplTest, ScrollBlocksOnTouchEventHandlers) {
 
   // Touch handler regions determine whether touch events block scroll.
   root->SetTouchEventHandlerRegion(gfx::Rect(0, 0, 100, 100));
-  EXPECT_EQ(InputHandler::TouchStartEventListenerType::HANDLER,
-            host_impl_->EventListenerTypeForTouchStartAt(gfx::Point(10, 10)));
+  EXPECT_EQ(
+      InputHandler::TouchStartOrMoveEventListenerType::HANDLER,
+      host_impl_->EventListenerTypeForTouchStartOrMoveAt(gfx::Point(10, 10)));
 
   // But they don't influence the actual handling of the scroll gestures.
   InputHandler::ScrollStatus status = host_impl_->ScrollBegin(
@@ -978,14 +979,17 @@ TEST_F(LayerTreeHostImplTest, ScrollBlocksOnTouchEventHandlers) {
             status.main_thread_scrolling_reasons);
   host_impl_->ScrollEnd(EndState().get());
 
-  EXPECT_EQ(InputHandler::TouchStartEventListenerType::HANDLER,
-            host_impl_->EventListenerTypeForTouchStartAt(gfx::Point(10, 30)));
+  EXPECT_EQ(
+      InputHandler::TouchStartOrMoveEventListenerType::HANDLER,
+      host_impl_->EventListenerTypeForTouchStartOrMoveAt(gfx::Point(10, 30)));
   root->SetTouchEventHandlerRegion(gfx::Rect());
-  EXPECT_EQ(InputHandler::TouchStartEventListenerType::NO_HANDLER,
-            host_impl_->EventListenerTypeForTouchStartAt(gfx::Point(10, 30)));
+  EXPECT_EQ(
+      InputHandler::TouchStartOrMoveEventListenerType::NO_HANDLER,
+      host_impl_->EventListenerTypeForTouchStartOrMoveAt(gfx::Point(10, 30)));
   child->SetTouchEventHandlerRegion(gfx::Rect(0, 0, 50, 50));
-  EXPECT_EQ(InputHandler::TouchStartEventListenerType::HANDLER,
-            host_impl_->EventListenerTypeForTouchStartAt(gfx::Point(10, 30)));
+  EXPECT_EQ(
+      InputHandler::TouchStartOrMoveEventListenerType::HANDLER,
+      host_impl_->EventListenerTypeForTouchStartOrMoveAt(gfx::Point(10, 30)));
 }
 
 TEST_F(LayerTreeHostImplTest, FlingOnlyWhenScrollingTouchscreen) {
@@ -10527,11 +10531,13 @@ TEST_F(LayerTreeHostImplTest, TouchInsideFlingLayer) {
 
   {
     // Touch on a layer which does not have a handler will return kNone.
-    EXPECT_EQ(InputHandler::TouchStartEventListenerType::NO_HANDLER,
-              host_impl_->EventListenerTypeForTouchStartAt(gfx::Point(10, 10)));
+    EXPECT_EQ(
+        InputHandler::TouchStartOrMoveEventListenerType::NO_HANDLER,
+        host_impl_->EventListenerTypeForTouchStartOrMoveAt(gfx::Point(10, 10)));
     child_layer->SetTouchEventHandlerRegion(gfx::Rect(0, 0, 100, 100));
-    EXPECT_EQ(InputHandler::TouchStartEventListenerType::HANDLER,
-              host_impl_->EventListenerTypeForTouchStartAt(gfx::Point(10, 10)));
+    EXPECT_EQ(
+        InputHandler::TouchStartOrMoveEventListenerType::HANDLER,
+        host_impl_->EventListenerTypeForTouchStartOrMoveAt(gfx::Point(10, 10)));
     // Flinging the grand_child layer.
     EXPECT_EQ(InputHandler::SCROLL_ON_IMPL_THREAD,
               host_impl_
@@ -10545,8 +10551,9 @@ TEST_F(LayerTreeHostImplTest, TouchInsideFlingLayer) {
     // Touch on the grand_child layer, which is an active fling layer, the touch
     // event handler will force to be passive.
     EXPECT_EQ(
-        InputHandler::TouchStartEventListenerType::HANDLER_ON_SCROLLING_LAYER,
-        host_impl_->EventListenerTypeForTouchStartAt(gfx::Point(70, 80)));
+        InputHandler::TouchStartOrMoveEventListenerType::
+            HANDLER_ON_SCROLLING_LAYER,
+        host_impl_->EventListenerTypeForTouchStartOrMoveAt(gfx::Point(70, 80)));
   }
 }
 
@@ -10603,13 +10610,15 @@ TEST_F(LayerTreeHostImplTest, TouchInsideOrOutsideFlingLayer) {
     // Touch on the grand_child layer, which is an active fling layer, the touch
     // event handler will force to be passive.
     EXPECT_EQ(
-        InputHandler::TouchStartEventListenerType::HANDLER_ON_SCROLLING_LAYER,
-        host_impl_->EventListenerTypeForTouchStartAt(gfx::Point(70, 80)));
+        InputHandler::TouchStartOrMoveEventListenerType::
+            HANDLER_ON_SCROLLING_LAYER,
+        host_impl_->EventListenerTypeForTouchStartOrMoveAt(gfx::Point(70, 80)));
     // Touch on the great_grand_child_layer layer, which is the child of the
     // active fling layer, the touch event handler will force to be passive.
     EXPECT_EQ(
-        InputHandler::TouchStartEventListenerType::HANDLER_ON_SCROLLING_LAYER,
-        host_impl_->EventListenerTypeForTouchStartAt(gfx::Point(20, 30)));
+        InputHandler::TouchStartOrMoveEventListenerType::
+            HANDLER_ON_SCROLLING_LAYER,
+        host_impl_->EventListenerTypeForTouchStartOrMoveAt(gfx::Point(20, 30)));
 
     // Now flinging on the great_grand_child_layer.
     EXPECT_EQ(InputHandler::SCROLL_ON_IMPL_THREAD,
@@ -10622,8 +10631,9 @@ TEST_F(LayerTreeHostImplTest, TouchInsideOrOutsideFlingLayer) {
     EXPECT_EQ(great_grand_child_layer->scroll_tree_index(),
               host_impl_->CurrentlyScrollingNode()->id);
     // Touch on the child layer, the touch event handler will be blocked.
-    EXPECT_EQ(InputHandler::TouchStartEventListenerType::HANDLER,
-              host_impl_->EventListenerTypeForTouchStartAt(gfx::Point(60, 60)));
+    EXPECT_EQ(
+        InputHandler::TouchStartOrMoveEventListenerType::HANDLER,
+        host_impl_->EventListenerTypeForTouchStartOrMoveAt(gfx::Point(60, 60)));
   }
 }
 
